complete Add project files.

--- a/App.config
+++ b/App.config
@@ -73,6 +73,9 @@
             <setting name="btnO11_48_Minh" serializeAs="String">
                 <value>5</value>
             </setting>
+            <setting name="soNguoiChoi" serializeAs="String">
+                <value>False</value>
+            </setting>
         </OAnQuan.Properties.Settings>
     </userSettings>
 </configuration>
