--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -65,5 +65,8 @@
     <Setting Name="btnO11_48_Minh" Type="System.String" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
+    <Setting Name="soNguoiChoi" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
